# lua_plugin

./: .gitignore  CMakeLists.txt  README.md
lua/: filter.lua  sink.lua  source.lua
src/: filter.cpp  lua_filter.cpp  lua_sink.cpp  lua_source.cpp  utils.hpp
windows/: CMakeLists.txt
